{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 195,
  "lineage": "a49bbb0c-4fb8-dea9-aeda-e14211427f09",
  "resources": [
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_firewall_nat_rule_collection",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Dnat",
            "azure_firewall_name": "example-firewall",
            "id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/azureFirewalls/example-firewall/natRuleCollections/testcollection",
            "name": "testcollection",
            "priority": 100,
            "resource_group_name": "grid-terraform",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "52.166.3.83"
                ],
                "destination_ports": [
                  "80"
                ],
                "name": "testrule",
                "protocols": [
                  "TCP"
                ],
                "source_addresses": [
                  "*"
                ],
                "source_ip_groups": null,
                "translated_address": "10.0.0.10",
                "translated_port": "80"
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.firewall.azurerm_firewall.firewall",
            "module.firewall.azurerm_public_ip.fw_ip",
            "module.firewall.azurerm_public_ip.fw_mgmt_ip",
            "module.firewall.azurerm_subnet.subnet_fw",
            "module.firewall.azurerm_subnet.subnet_fw_mgmt",
            "module.load_balancer.azurerm_lb.lb",
            "module.network_module.azurerm_subnet.subnet",
            "module.network_module.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "firewall_policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_learn_private_ranges_enabled": false,
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "explicit_proxy": [],
            "firewalls": [],
            "id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/firewallPolicies/example-fw-policy",
            "identity": [],
            "insights": [],
            "intrusion_detection": [],
            "location": "westeurope",
            "name": "example-fw-policy",
            "private_ip_ranges": null,
            "resource_group_name": "grid-terraform",
            "rule_collection_groups": [],
            "sku": "Standard",
            "sql_redirect_allowed": null,
            "tags": null,
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fw_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/publicIPAddresses/example-fw-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.166.3.83",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "example-fw-ip",
            "resource_group_name": "grid-terraform",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fw_mgmt_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/publicIPAddresses/example-fw-mgmt-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.178.11.135",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "example-fw-mgmt-ip",
            "resource_group_name": "grid-terraform",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_route",
      "name": "route_to_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/routeTables/example-rt/routes/route-through-firewall",
            "name": "route-through-firewall",
            "next_hop_in_ip_address": "10.0.1.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "grid-terraform",
            "route_table_name": "example-rt",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.firewall.azurerm_firewall.firewall",
            "module.firewall.azurerm_public_ip.fw_ip",
            "module.firewall.azurerm_public_ip.fw_mgmt_ip",
            "module.firewall.azurerm_route_table.fw_rt",
            "module.firewall.azurerm_subnet.subnet_fw",
            "module.firewall.azurerm_subnet.subnet_fw_mgmt",
            "module.network_module.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "fw_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp_route_propagation_enabled": true,
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/routeTables/example-rt",
            "location": "westeurope",
            "name": "example-rt",
            "resource_group_name": "grid-terraform",
            "route": [],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_fw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/26"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/virtualNetworks/grid-network-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "grid-terraform",
            "virtual_network_name": "grid-network-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_module.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_fw_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.64/26"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/virtualNetworks/grid-network-vnet/subnets/AzureFirewallManagementSubnet",
            "name": "AzureFirewallManagementSubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "grid-terraform",
            "virtual_network_name": "grid-network-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_module.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/loadBalancers/grid-lb-lb/frontendIPConfigurations/grid-lb-lb-frontend-ip-conf",
                "name": "grid-lb-lb-frontend-ip-conf",
                "private_ip_address": "10.0.0.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/virtualNetworks/grid-network-vnet/subnets/grid-network-subnet"
              }
            ],
            "id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/loadBalancers/grid-lb-lb",
            "location": "westeurope",
            "name": "grid-lb-lb",
            "private_ip_address": "10.0.0.10",
            "private_ip_addresses": [
              "10.0.0.10"
            ],
            "resource_group_name": "grid-terraform",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_module.azurerm_subnet.subnet",
            "module.network_module.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "lb_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/loadBalancers/grid-lb-lb/backendAddressPools/grid-lb-backend-pool",
            "loadbalancer_id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/loadBalancers/grid-lb-lb",
            "name": "grid-lb-backend-pool"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.load_balancer.azurerm_lb.lb",
            "module.network_module.azurerm_subnet.subnet",
            "module.network_module.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/loadBalancers/grid-lb-lb/probes/grid-lb-health-probe",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/loadBalancers/grid-lb-lb",
            "name": "grid-lb-health-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.load_balancer.azurerm_lb.lb",
            "module.network_module.azurerm_subnet.subnet",
            "module.network_module.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/loadBalancers/grid-lb-lb/backendAddressPools/grid-lb-backend-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/loadBalancers/grid-lb-lb/frontendIPConfigurations/grid-lb-lb-frontend-ip-conf",
            "frontend_ip_configuration_name": "grid-lb-lb-frontend-ip-conf",
            "frontend_port": 80,
            "id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/loadBalancers/grid-lb-lb/loadBalancingRules/grid-lb-lb-rule",
            "idle_timeout_in_minutes": 5,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/loadBalancers/grid-lb-lb",
            "name": "grid-lb-lb-rule",
            "probe_id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/loadBalancers/grid-lb-lb/probes/grid-lb-health-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.load_balancer.azurerm_lb.lb",
            "module.load_balancer.azurerm_lb_backend_address_pool.lb_pool",
            "module.load_balancer.azurerm_lb_probe.lb_probe",
            "module.network_module.azurerm_subnet.subnet",
            "module.network_module.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/networkSecurityGroups/grid-network-nsg",
            "location": "westeurope",
            "name": "grid-network-nsg",
            "resource_group_name": "grid-terraform",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/networkSecurityGroups/grid-network-nsg/securityRules/http",
            "name": "http",
            "network_security_group_name": "grid-network-nsg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "grid-terraform",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_module.azurerm_network_security_group.nsg"
          ]
        },
        {
          "index_key": "ssh",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/networkSecurityGroups/grid-network-nsg/securityRules/ssh",
            "name": "ssh",
            "network_security_group_name": "grid-network-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "grid-terraform",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_module.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/virtualNetworks/grid-network-vnet/subnets/grid-network-subnet",
            "name": "grid-network-subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "grid-terraform",
            "virtual_network_name": "grid-network-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_module.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/virtualNetworks/grid-network-vnet/subnets/grid-network-subnet",
            "network_security_group_id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/networkSecurityGroups/grid-network-nsg",
            "subnet_id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/virtualNetworks/grid-network-vnet/subnets/grid-network-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_module.azurerm_network_security_group.nsg",
            "module.network_module.azurerm_subnet.subnet",
            "module.network_module.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.network_module",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a0407424-ed12-406d-be8b-57ca6b761f98",
            "id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/virtualNetworks/grid-network-vnet",
            "location": "westeurope",
            "name": "grid-network-vnet",
            "resource_group_name": "grid-terraform"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vm_image",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "temp_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/networkInterfaces/grid-image-base-vm-temp-nic",
            "internal_domain_name_suffix": "er0ebias3vwubpulk5fgw3q5ta.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c539c22d-81df-4900-93d0-f5d20ccc64b9/resourceGroups/grid-terraform/providers/Microsoft.Network/virtualNetworks/grid-network-vnet/subnets/grid-network-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "grid-image-base-vm-temp-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "grid-terraform"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.network_module.azurerm_subnet.subnet",
            "module.network_module.azurerm_virtual_network.vnet"
          ]
        }
      ]
    }
  ]
}